# realtimeclickstream

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README_local.md  SKILL.md  claude-issue-triage.yml  claude-pr-comment.yml  claude-pr-review.yml  handler.py  main.tf  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  test_handler.py  test_models.py  transformer.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  nightly_spark.yml  nightly_teardown.yml
athena/schema/: create_tables.sql
athena/views/: accuracy_comparison.sql  batch_sessions.sql  realtime_sessions.sql
data/sample/: DOWNLOAD_INSTRUCTIONS.txt
data/schemas/: event_schema.json
docs/: architecture.md  interview-prep.md  setup-guide.md  step-by-step.md  tradeoffs.md
mnt/user-data/outputs/clickstream-pipeline/infra/modules/glue/: main.tf
mnt/user-data/outputs/clickstream-pipeline/infra/modules/monitoring/: main.tf
scripts/: athena_setup.sh  build_lambda.sh  check_env.sh  export_dynamodb_snapshot.sh  run_full_pipeline.sh  setup.sh  submit_spark_job.sh  teardown_dev.sh
src/dashboard/: accuracy_latency_dashboard.py  local_report.py
src/event_simulator/: __init__.py  config.py  event_schema.py  kinesis_producer.py  late_arrival_injector.py  metrics.py  simulator.py
src/lambda/sessionizer/: cart_calculator.py  dlq_handler.py  handler.py  requirements.txt  session_state.py
src/lambda/shared/: __init__.py  dynamodb_client.py  utils.py
src/spark/: __init__.py  late_arrival_handler.py  session_stitcher.py  spark_utils.py
terraform/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/environments/: dev.tfvars  prod.tfvars
terraform/modules/cloudwatch/: main.tf  variables.tf
terraform/modules/dynamodb/: main.tf  variables.tf
terraform/modules/emr_serverless/: main.tf  variables.tf
terraform/modules/kinesis/: main.tf  variables.tf
terraform/modules/lambda/: dlq.tf  main.tf  variables.tf
terraform/modules/s3_athena/: glue_crawler.tf  main.tf  variables.tf
terraform/terraform.tfstate.d/dev/: terraform.tfstate.backup
tests/: conftest.py
tests/fixtures/: kinesis_batch.json  kinesis_full_session.json  kinesis_late_arrival_mixed.json  kinesis_malformed_record.json  kinesis_single_view.json  kinesis_two_users.json
tests/integration/: conftest.py  test_end_to_end.py
tests/unit/: test_dlq_handler.py  test_dynamodb_client.py  test_lambda_handler.py  test_local_report.py  test_metrics.py  test_sessionizer.py  test_simulator.py  test_spark.py  test_utils.py
