[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "clickstream-stream-processor"
version     = "1.0.0"
description = "Real-time clickstream analytics pipeline — stream processor Lambda"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "aws-xray-sdk>=2.14,<3",
    "boto3>=1.34,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "moto[s3,kinesis]>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[s3,kinesis]>=1.34",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py312"
src            = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "ANN", # type annotations
]
ignore = [
    "ANN101",  # self type annotation not needed
    "ANN102",  # cls type annotation not needed
    "ANN401",  # Any allowed in properties dict
]

[tool.ruff.lint.isort]
known-first-party = ["stream_processor"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true
exclude                = ["tests/"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths      = ["tests"]
pythonpath     = ["."]
addopts        = "-v --tb=short"
log_cli        = true
log_cli_level  = "WARNING"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["src"]
omit     = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
fail_under   = 90
