[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clickstream-pipeline"
version = "0.1.0"
description = "Real-time clickstream analytics — Lambda Architecture on AWS"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "pandas>=2.1.0",
  "pyarrow>=14.0.0",
  "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.3.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_classes   = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests requiring a live AWS dev environment (deselect with -m 'not integration')",
]
addopts = "-v --tb=short -m 'not integration'"

[tool.ruff]
line-length    = 100
target-version = "py312"
src            = ["src", "tests"]

[tool.ruff.lint]
select  = ["E", "W", "F", "I", "B", "UP"]
ignore  = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
omit = [
    "src/spark/*",
    "src/dashboard/*",
    "src/event_simulator/simulator.py",
    "src/event_simulator/config.py",
]

[tool.mypy]
python_version         = "3.12"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true
